[gd_scene load_steps=6 format=3 uid="uid://4yeivroypj5"]

[ext_resource type="Script" uid="uid://bc756880ny1v8" path="res://scenes/windows/gas-layer-surveyor/layer_representation.gd" id="1_4tpes"]
[ext_resource type="Theme" uid="uid://b48jsacdlk7jt" path="res://theme-gen/custom-tooltip/custom_tooltip_host.tres" id="1_80jb3"]
[ext_resource type="FontFile" uid="uid://xrcqj2080elm" path="res://graphics/fonts/RobotoMono Medium.ttf" id="4_4h7dl"]

[sub_resource type="Gradient" id="Gradient_exk85"]
resource_local_to_scene = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hp5ml"]
resource_local_to_scene = true
gradient = SubResource("Gradient_exk85")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="layer_representation" type="TextureButton"]
custom_minimum_size = Vector2(100, 48)
offset_right = 100.0
offset_bottom = 45.0
size_flags_horizontal = 4
tooltip_text = "[img]res://Graphics/Mouse/mouse_left.png[/img] Switch Column
[img]res://Graphics/Mouse/mouse_right.png[/img] View in Encyclopedia"
theme = ExtResource("1_80jb3")
texture_normal = SubResource("GradientTexture2D_hp5ml")
ignore_texture_size = true
stretch_mode = 6
script = ExtResource("1_4tpes")

[node name="cover" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 4

[node name="status_texture" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="status_label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_4h7dl")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
